tests/error/error05.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_PRINT {exp=EXP_THIS},ST_PRINT {exp=EXP_STRING "\n"}]} : program
;
